--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ exclude:
   - package-lock.json
 
 author: Jing Tian Feng
-title: Jekytrap
-tagline: SSG made simple
-description: Template for Jekyll + Bootstrap 5
-url: https://jingtianfeng.github.io/jekytrap
+title: Jekytrap Playground Real Estate
+tagline: Jekytrap Playground Real Estate
+description: Jekytrap Playground Real Estate
+url: https://jingtianfeng.github.io/jekytrap-playground-realestate
 logo: /assets/img/logo.png
